<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/findBL" />
        <item
            android:id="@+id/nav_buzz"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/buzz" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

</menu>
