<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateBeeline"
    tools:showIn="@layout/activity_create_beeline">

    <TextView
        android:id="@+id/addl_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="344dp"
        android:text="@string/addl_info_txt"
        android:textColor="@color/colorSecondaryAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/start_loc4"
        android:layout_width="389dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/end_loc_sub"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_loc_txt" />

    <TextView
        android:id="@+id/end_loc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="224dp"
        android:text="@string/end_loc_txt"
        android:textColor="@color/colorSecondaryAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/meeting_time"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_date_txt" />

    <TextView
        android:id="@+id/meeting_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="120dp"
        android:text="@string/meeting_time_txt"
        android:textColor="@color/colorSecondaryAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_loc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_loc_txt"
        android:textColor="@color/colorSecondaryAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="116dp"
        android:text="@string/meeting_date_txt"
        android:textColor="@color/colorSecondaryAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/start_loc"
        android:layout_width="381dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/start_loc_sub"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_loc_txt" />

    <EditText
        android:id="@+id/meeting_date"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_date_txt" />

    <EditText
        android:id="@+id/addl_info"
        android:layout_width="381dp"
        android:layout_height="106dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/addl_info_sub"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addl_info_txt" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="81dp"
        android:background="@color/colorSecondaryAccent"
        android:text="@string/btn_add_beeline"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addl_info"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>